crates/ic-lint/tests/snapshots/circular_inheritance__circular_interface_inheritance.snap
---
source: crates/ic-lint/tests/circular_inheritance.rs
expression: test_lint_hir(source)
---
error[circular_inheritance]: interface 'A' has circular inheritance through 'B'
   ┌ test.idl:2:11
   │
 2 │ interface A : B {};
   ·           ^ circular inheritance detected
   └──

error[circular_inheritance]: interface 'B' has circular inheritance through 'A'
   ┌ test.idl:3:11
   │
 3 │ interface B : A {};
   ·           ^ circular inheritance detected
   └──

error: circular dependency detected for type `A`
   ┌ test.idl:2:1
   │
 2 │ interface A : B {};
   · ^^^^^^^^^^^^^^^^^^^ type is part of a circular dependency
   └──

error: circular dependency detected for type `B`
   ┌ test.idl:3:1
   │
 3 │ interface B : A {};
   · ^^^^^^^^^^^^^^^^^^^ type is part of a circular dependency
   └──
