crates/ic-lint/tests/snapshots/circular_inheritance__complex_circular_inheritance.snap
---
source: crates/ic-lint/tests/circular_inheritance.rs
expression: test_lint_hir(source)
---
error[circular_inheritance]: interface 'A' has circular inheritance through 'B'
   ┌ test.idl:2:11
   │
 2 │ interface A : B, C {};
   ·           ^ circular inheritance detected
   └──

error[circular_inheritance]: interface 'B' has circular inheritance through 'D'
   ┌ test.idl:3:11
   │
 3 │ interface B : D {};
   ·           ^ circular inheritance detected
   └──

error[circular_inheritance]: interface 'D' has circular inheritance through 'A'
   ┌ test.idl:5:11
   │
 5 │ interface D : A {};
   ·           ^ circular inheritance detected
   └──

error: circular dependency detected for type `A`
   ┌ test.idl:2:1
   │
 2 │ interface A : B, C {};
   · ^^^^^^^^^^^^^^^^^^^^^^ type is part of a circular dependency
   └──

error: circular dependency detected for type `B`
   ┌ test.idl:3:1
   │
 3 │ interface B : D {};
   · ^^^^^^^^^^^^^^^^^^^ type is part of a circular dependency
   └──

error: circular dependency detected for type `D`
   ┌ test.idl:5:1
   │
 5 │ interface D : A {};
   · ^^^^^^^^^^^^^^^^^^^ type is part of a circular dependency
   └──
