crates/ic-lint/tests/snapshots/circular_inheritance__self_referential_interface.snap
---
source: crates/ic-lint/tests/circular_inheritance.rs
expression: output
---
error[circular_inheritance]: interface `SelfRef` has circular inheritance
   ┌ test.idl:4:9
   │
 4 │         interface SelfRef : SelfRef {
   ·         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type is part of a circular dependency
 5 │             void method();
   · 
 6 │         };
   · ^^^^^^^^^^
   └──
 note: inheritance cycle: SelfRef -> SelfRef
