crates/ic-lint/tests/snapshots/circular_inheritance__self_referential_struct.snap
---
source: crates/ic-lint/tests/circular_inheritance.rs
expression: output
---
error: struct `SelfRef` cannot inherit from incomplete type `SelfRef`
   ┌ test.idl:4:9
   │
 4 │         struct SelfRef : SelfRef {
   ·         ^^^^^^^^^^^^^^^^^^^^^^^^^^ invalid inheritance
 5 │             long value;
   · 
 6 │         };
   · ^^^^^^^^^^
 2 │         struct SelfRef;
   ·                ^^^^^^^ forward declaration here, but no definition found
   └──
