crates/ic-lint/tests/snapshots/circular_inheritance__valuetype_circular_inheritance.snap
---
source: crates/ic-lint/tests/circular_inheritance.rs
expression: test_lint_hir(source)
---
error[circular_inheritance]: valuetype 'A' has circular inheritance through 'B'
   ┌ test.idl:2:11
   │
 2 │ valuetype A : B {};
   ·           ^ circular inheritance detected
   └──

error[circular_inheritance]: valuetype 'B' has circular inheritance through 'A'
   ┌ test.idl:3:11
   │
 3 │ valuetype B : A {};
   ·           ^ circular inheritance detected
   └──
